--- a/public/excel.html
+++ b/public/excel.html
@@ -34,6 +34,9 @@
     impHeaders = [];
     outHeaders = [];
     OPsettings = {};
+
+    COMBD_DATA = [];
+    
     let tableMarkupOP = document.getElementById('result-table');
 
     (handleSettings = () => {
