Worked out SLICK D&D, figured out where we were going wrong on CSV parsing, and laid basic logic filters. Began work on UI elements for File Drop.

--- a/public/data_parser.html
+++ b/public/data_parser.html
@@ -1937,8 +1937,8 @@ function precise(val, dec) {
 }
 
 fullOp = [], rowOp=[];
-hdrRow = ['STATUS', 'STORY NUMBER', 'PARENT STORY']
-for(var i=0; i<data[Object.keys(data)[0]].length; i++){
+hdrRow = ['STATUS', 'STORY NUMBER', 'PARENT STORY', 'BASELINE']
+for(var i=0; i<data[Object.keys(data)[0]].length-1; i++){
     hdrRow.push('DAY ' + (i+1));
 }
 // fullOp.push(hdrRow);
